# Ignashin_MS_thesis

./: .gitignore  README.md  README.rst
.doctrees/: environment.pickle  index.doctree  info.doctree  installation.doctree  train.doctree
code/: README.md  code_links.md  pyproject.toml
code/archive/: functions.py  model.py  modeling.ipynb
code/src/skycycles/: __init__.py  model.py  setups.py
code/src/skygraph/: __init__.py  graph.py  model.py
code/src/skygraph/agents/: __init__.py  agent.py  linear_agent.py  utils.py
code/tests/: linear_agent.ipynb  linear_agent_validation.ipynb  skycycles.ipynb  skygraph.ipynb  small_solve_system_tests.ipynb
paper/: MasterThesis.tex
paper/thesis_sections/: annotation.tex  bibliography.tex  cfw_ml.tex  cfw_ml_technical_details.tex  conclusion.tex  dbcfw.tex  dbcfw_technical_details.tex  frontpage.tex  fw_modifications.tex  fw_technical_details.tex  introduction.tex  notation.tex  scfw.tex  scfw_technical_details.tex
slides/: thesis_3min.tex  thesis_slides.tex
